fix/ fix the double scrollbar on the projects page

--- a/src/index.css
+++ b/src/index.css
@@ -19,7 +19,7 @@ h2 {
 }
 
 .pages-common-style {
-  @apply flex flex-col overflow-auto;
+  @apply flex flex-col;
 }
 
 .input-style {
